# cpp-kinematic-simulation

./: .gitignore  README.md
Project1_KinematicMover/: README.md  main.cpp
Project1_KinematicMover/src/: Vector2.cpp
Project2_ParticleSystemSim/: CMakeLists.txt  README.md
Project2_ParticleSystemSim/include/: Particle.h
Project2_ParticleSystemSim/src/: ParticleSystem.cpp
infra/: README.md
kinematic_mover/: CMakeLists.txt  README.md
kinematic_mover/include/: KinematicBody.h  Vector2.h
kinematic_mover/src/: KinematicBody.cpp
particle_system/: README.md  main.cpp
particle_system/include/: ParticleSystem.h
particle_system/src/: Particle.cpp
